using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

internal class AnimationStrings {
    internal static string jumpTrigger = "jump";
    internal static string attackTrigger = "attack";
    internal static string isOnWall = "isOnWall";
    internal static string isMoving = "isMoving";
    internal static string isRunning = "isRunning";
    internal static string isGrounded = "isGrounded";
    internal static string isOnCeiling = "isOnCeiling";
    internal static string canMove = "canMove";
    internal static string velocityY = "velocityY";
}